# mt_cmake_top_lib

./: .gitignore  CMakeLibTop.cpp  CMakeLibTop.h  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
cmake/: config.cmake.in
include/: CMakeLibTop.h  CMakeTopLib.h  CMakeTopLibSpecificApi.h
src/: CMakeTopLib.cpp
src/ext/: Ext.cpp
src/plain/: Plain.cpp
